--- a/Vue2/12.组件（二）.md
+++ b/Vue2/12.组件（二）.md
@@ -227,7 +227,7 @@ provide() {
 
 Inject获取到的数据和prop一样是只读的（不能修改变量指向，但是可以修改变量属性值）。
 
-注意：如果传递的数据如果是引用类型，改变这个数据的属性值引起的其他组件的变化，是由于数据为引用类型导致的，不是响应式。
+注意：如果传递的数据如果是引用类型，直接改变这个数据的属性值引起的其他组件的变化，是由于数据为引用类型导致的，不是响应式。正确行为是通过 $emit 通知数据所属的组件来修改。
 
 ###  动态组件
 ```
