--- a/开发环境/4.Git/1.理解Git.md
+++ b/开发环境/4.Git/1.理解Git.md
@@ -12,30 +12,30 @@ Git是目前最流行的分布式版本控制系统。
 在[官网][1]可以选择对应系统的Git下载。
 下载安装完成后，需要打开Git Bash应用，输入
 
-    $ git config --global user.name "myname"
-    $ git config --global user.email "myE-mail"
+    git config --global user.name "myname"
+    git config --global user.email "myE-mail"
 这样就能标明是我在进行git操作，用于分布式版本控制系统内进行识别。
+
 
 ###  配置
 Git的设置文件为.gitconfig，它可以在用户主目录下（全局配置），也可以在项目目录下（项目配置）。
 ```
 # 显示当前的Git配置
-$ git config --list
+git config --list
 
 # 编辑Git配置文件
-$ git config -e [--global]
+git config -e [--global]
 ```
 
 ###  创建本地库
 本地库就是一个文件夹目录，这个目录里面的所有文件都可以被Git管理起来，每个文件改变，Git都能跟踪，以便任何时刻都可以追踪历史，或者在将来某个时刻可以“还原”。
 创建位置可以自己选择，这里我选择就建立在C盘
 
-    $ cd /c
-    $ mkdir gittest
-    $ cd gittest
+    cd /c
+    mkdir gittest
+    cd gittest
 创建完成后，通过`git init`命令进行初始化，把这个目录变成Git可以管理的本地库：
 
-    $ git init
-
+    git init
 
   [1]: https://git-scm.com
