--- a/开发环境/4.Git/2.版本控制.md
+++ b/开发环境/4.Git/2.版本控制.md
@@ -1,17 +1,7 @@
 版本控制
 ===================
 
-###  导入仓库
-第一步，用命令`git add`告诉Git，把文件添加到缓存区：
-
-    $ git add test.txt
-
-第二步，用命令`git commit`告诉Git，把缓存区文件提交到本地仓库：
-
-    $ git commit -m "add a test.txt"
-这里`-m`后面输入的是本次提交内容的日志，表明提交的是什么。
-
-###  文件修改
+###  监察文件修改
 当本地的文件被修改，Git就能跟踪到这个修改，运行`git status`命令可以查看状态：
 
     $ git status
@@ -27,9 +17,32 @@
 `git status`命令可以查看未被提交（commit）的改变。这个改变是发生在工作区，则显示红色字体，这个改变add到了暂存区，则显示绿色字体。
 确定了修改的文件，可以使用`git diff`命令查看该文件的具体修改情况。
 
-    $ git diff test.txt
-文件的修改没有问题的话，就可以再次导入仓库了。
+    git diff test.txt
+文件修改完成后，就可以提交了。
 
+###  提交流程
+**工作区→添加(add)→暂存区→提交(commit)→本地仓库**
+第一步，用命令`git add`告诉Git，把文件**添加**到缓存区：
+
+    git add test.txt
+    git add .  //添加所有修改的文件
+
+第二步，用命令`git commit`告诉Git，把缓存区所有文件**提交**到本地仓库：
+
+    git commit -m "add a test.txt"
+
+    # 如果提交后发现备注写错，修改备注
+    git commit --amend -m "修正后的备注"
+这里`-m`后面输入的是本次提交内容的日志，表明提交的是什么。
+
+### .gitignore 文件
+根目录创建.gitignore文件，表示哪些文件 / 文件夹不检测更新：
+```
+# 忽略node_modules文件夹
+node_modules/
+# 忽略所有markdown文件
+*.md
+```
 ###  版本信息
 在多次修改提交文件之后，GIt会储存不同版本的版本信息，使用`git log`命令查看：
 
