--- a/开发环境/4.Git/4.远程仓库.md
+++ b/开发环境/4.Git/4.远程仓库.md
@@ -6,39 +6,38 @@ GitHub网站就是提供Git仓库托管服务的，所以，只要注册一个Gi
 本地Git仓库和GitHub仓库之间的传输是通过SSH加密的，所以，需要一点设置：
 1.在用户主目录下，看看有没有.ssh文件夹和id_rsa和id_rsa.pub这两个文件。如果没有，就创建SSH Key：
 
-    $ ssh-keygen -t rsa -C "myE-mail"
+    ssh-keygen -t rsa -C "myE-mail"
 2.登陆github，在个人设置界面的ssh新建一个ssh连接，使用的key值为id_rsa.pub文件的内容。
 此时，当前电脑已经可以往GitHub推送了。
 
 ###  建立远程库
 首先，登陆GitHub，创建一个默认值的新仓库,命名为gittest。这个仓库还是空的，可以把一个已有的本地仓库与之关联，然后，把本地仓库的内容推送到GitHub仓库。在本地的learngit仓库下运行命令：
 
-    $ git remote add origin git@github.com:myGithubName/gittest.git
+    git remote add origin git@github.com:myGithubName/gittest.git
 
 添加后，远程库的名字就是origin，这是Git默认的叫法，也可以改成别的。
-###  推送
-把本地库的内容推送到远程，用`git push`命令，实际上是把当前分支master推送到远程。
-
-    $ git push -u origin master
-Git不但会把本地的master分支内容推送到远程新的master分支，还会把本地的master分支和远程的master分支关联起来，在以后的推送或者拉取时就可以简化命令。
 
 ### 拉取
 #### git fetch
-git fetch 是将远程主机的最新内容拉到本地，用户可以以后决定是否合并。
+git fetch 是将远程主机的最新内容拉到本地，不合并。
 
-取回origin 主机的master 分支：
-
-    $ git fetch origin master
-取回更新后，会返回一个FETCH_HEAD ，指的是某个branch在服务器上的最新状态，如果更新merge到当前分支
-
-    git merge origin/master
+    git fetch origin master
 
 #### git pull
-git pull 则是将远程主机的最新内容拉下来后直接合并。可以说git pull是git fetch和git merge两个命令的组合
+git pull 则是将远程主机的最新内容拉下来后直接合并。可以说git pull是git fetch + git merge
+
+
+###  推送
+把本地库的内容推送到远程，用`git push`命令。
+
+    git push -u origin master
+首次推送，需要关联本地和远程分支，后续直接git push。
+
+注意，远程分支和本地可能有冲突，需要解决冲突后再推送。**先拉取再推送**。
 
 
 ###  从远程库克隆
 新建一个github仓库gitskills，建立时勾选Initialize this repository with a README，这样GitHub会自动为我们创建一个README.md文件。
 现在，远程库已经准备好了，下一步是用命令git clone克隆一个本地库：
 
-    $ git clone git@github.com:myGithubName/gitskills.git
+    git clone git@github.com:myGithubName/gitskills.git
