--- a/Ajax/7.CORS.md
+++ b/Ajax/7.CORS.md
@@ -30,5 +30,5 @@ xhr.withCredentials = true;
 如果Origin指定的源，不在许可范围内，服务器会返回一个正常的 HTTP 回应。这个回应的头信息没有包含Access-Control-Allow-Origin字段。浏览器会抛出一个错误，被XMLHttpRequest的onerror回调函数捕获。注意，这种错误无法通过状态码识别，因为 HTTP 回应的状态码有可能是200。
 
 ###  非简单请求
-非简单请求是那种对服务器提出特殊要求的请求，比如请求方法是PUT或DELETE，或者Content-Type字段的类型是application/json。
+非简单请求是对服务器提出特殊要求的请求，比如请求方法是GET/POST/HEAD以外的方法，或者Content-Type字段的类型是application/json。后端需要配置Access-Control-Allow-Origin、允许自定义头/方法等。
 非简单请求的 CORS 请求，会在正式通信之前，增加一次 HTTP 查询请求，只有得到肯定答复，浏览器才会发出正式的XMLHttpRequest请求，否则就报错。
