--- a/Vue2/12.组件（二）.md
+++ b/Vue2/12.组件（二）.md
@@ -90,7 +90,7 @@ props:{
     }
 }
 ```
-要注意，**如果默认值是对象，则必须使用函数返回**：
+要注意，**如果默认值是对象，则必须使用函数返回**，否则所有组件实例的值都指向同一个内存地址，互相影响：
 ```
 postdata: {
     type: Array,
