--- a/Vue2/15.混入、插件和过滤器..md
+++ b/Vue2/15.混入、插件和过滤器..md
@@ -3,7 +3,7 @@
 ###  混入
 
 混入 (mixins)用于封装通用的方法或者计算属性，作用类似于函数。
-当组件使用混入对象时，混入对象的选项将被“混合”进入该组件本身。
+当组件使用混入对象时，混入对象的选项将被“混合”进入该组件本身。每个组件的 mixin 数据是独立的。
 ```
 // 定义一个混入对象
 var myMixin = {
