--- a/Vue2/19.前端路由（一）.md
+++ b/Vue2/19.前端路由（一）.md
@@ -47,5 +47,8 @@ h5提供了操控history栈的方法：
 
 当调用`history.pushState()`方法向history栈中压入一个新的state后，history栈的history.state指针是指向新的state的。也就是模仿url地址改变并进行了跳转，在历史记录中保存记录，实现了前端路由。注意：这样是不触发`window.onpopstate`。
 
+**页面刷新**
+History 模式需要后端配合，否则刷新页面会报 404。
+
 2.**Hash方式**
 改变hash会使HTML页面无刷新跳转到新hash位置，同时在window对象上触发hashChange事件。在页面锚点哈希改变为某个预设值的时候，通过代码触发对应的页面DOM改变，实现了前端路由。
