--- a/Vue2/20.前端路由（二）.md
+++ b/Vue2/20.前端路由（二）.md
@@ -25,7 +25,7 @@ export default new Router({
     routes:[]
 })
 ```
-###  创建vue-router实例
+###  创建router实例
 
 **配置映射关系**
 在router.js路由内，配置路径（path）和组件（ component）之间的对应关系：
@@ -71,8 +71,24 @@ routes: [
 
 <router-link to="/user/wxc">Go to User</router-link>
 ```
-这样，就能正确路由到user组件，变量userName可以获取到字符串'wxc'，这些对应关系储存在this.$route.params内。
+这样，就能正确路由到User组件，变量userName可以获取到字符串'wxc'，User组件可以在this.$route.params.userName内获取。
 
+**无法匹配路由**
+用户访问不存在的路径，可以设置匹配到404组件页，这一项写在最后。
+```
+Vue 2（Vue Router 3）	
+{
+  path: path: "*" //  或 path: "(.*)"
+  component: PageNotFound
+}
+
+Vue 3（Vue Router 4）	
+{
+  path: "/:pathMatch(.*)*"
+  component: PageNotFound
+}
+```
+注意：history模式下，只有编程式跳转，浏览器前进 / 后退，前端404才能生效，直接地址栏输入和刷新不生效。
 ###  挂载router实例
 
 **配置router组件**
