--- a/Vue2/21.前端路由（三）.md
+++ b/Vue2/21.前端路由（三）.md
@@ -53,6 +53,46 @@ mode:'history'
   </div>
 </template>
 ```
+### 路由元信息
+给页面的路由对象添加meta对象，可以给该页面的路由对象添加自定义数据：
+```
+{
+  path: '/ticket',
+  name: 'ticket',
+  meta:{
+      data:"ticket页面"
+  },
+  component: ()=>import('./views/Ticket.vue')
+}
+```
+这个数据保存在$route的meta属性内。
+
+### 编程式导航
+```
+this.$router.push(options, onComplete?, onAbort?)
+```
+当点击 `<router-link>` 时，也是在内部调用的这个方法。
+```
+this.$router.push({ name: 'home', path: 'home' }) // 和二级路由一样，路径不要写/
+```
+此时，路由会跳转到routes内设置的/home路径。还可以传入params或query传递参数，但是使用params时，不能使用path，必须使用name。
+
+### 动态添加路由
+静态路由是直接写死的路由信息，动态路由则根据从服务器获取的数据，动态的添加路由信息。
+```
+// 添加根路由
+router.addRoute({routeOptions})
+
+// 为routeName添加子路由
+router.addRoute(routeName,{routeOptions})
+```
+一般在导航守卫中动态的添加路由，这种情况下，往往addRoutes()没有执行结束就会访问被添加的路由，因而找不到刚刚被添加的路由导致白屏，因此需要使用`next({ ...to, replace: true })`来递归。
+
+**路由信息**
+```
+router.hasRoute(name)：返回路由是否存在
+router.getRoutes()：返回一个包含所有路由（包括子路由）的数组
+```
 
 ###  导航守卫
 导航守卫用于监听导航的发生。
@@ -94,8 +134,8 @@ router.beforeEach((to,from)=>{
 })
 ```
 
-**路由守卫**
-每个路由也可以配置 beforeEnter 守卫，和全局前置守卫类似：
+**单独守卫**
+每个route也可以配置 beforeEnter 守卫，和全局前置守卫类似：
 ```
 {
     path: '/',
@@ -128,11 +168,11 @@ beforeRouteLeave(to, from, next) {
 beforeRouteEnter 守卫可以通过传一个回调给 next 来访问组件实例。在导航被确认的时候执行回调，并且把组件实例作为回调方法的参数。
 
 
-beforeRouteEnter (to, from, next) {
-  next(vm => {
-    // 通过 `vm` 访问组件实例
-  })
-}
+    beforeRouteEnter (to, from, next) {
+    next(vm => {
+        // 通过 `vm` 访问组件实例
+    })
+    }
 
 **导航流程**
 1.导航被触发。
@@ -148,42 +188,3 @@ beforeRouteEnter (to, from, next) {
 11.触发 DOM 更新。
 12.调用 beforeRouteEnter 守卫中传给 next 的回调函数，创建好的组件实例会作为回调函数的参数传入。
 
-### 路由元信息
-给页面的路由对象添加meta对象，可以给该页面的路由对象添加自定义数据：
-```
-{
-  path: '/ticket',
-  name: 'ticket',
-  meta:{
-      data:"ticket页面"
-  },
-  component: ()=>import('./views/Ticket.vue')
-}
-```
-这个数据保存在$route的meta属性内。
-
-### 编程式导航
-```
-this.$router.push(options, onComplete?, onAbort?)
-```
-当点击 `<router-link>` 时，也是在内部调用的这个方法。
-```
-this.$router.push({ name: 'home', path: 'home' }) // 和二级路由一样，路径不要写/
-```
-此时，路由会跳转到routes内设置的/home路径。还可以传入params或query传递参数，但是使用params时，不能使用path，必须使用name。
-
-### 动态路由
-静态路由是直接写死的路由信息，动态路由则根据从服务器获取的数据，动态的添加路由信息。
-```
-// 添加根路由
-router.addRoute({routeOptions})
-// 为routeName添加子路由
-router.addRoute(routeName,{routeOptions})
-```
-一般在导航守卫中动态的添加路由，这种情况下，往往addRoutes()没有执行结束就会访问被添加的路由，因而找不到刚刚被添加的路由导致白屏，因此需要使用`next({ ...to, replace: true })`来递归。
-
-**路由信息**
-```
-router.hasRoute(name)：返回路由是否存在
-router.getRoutes()：返回一个包含所有路由（包括子路由）的数组
-```
