--- a/Vue2/23.Vuex（二）.md
+++ b/Vue2/23.Vuex（二）.md
@@ -184,41 +184,49 @@ const moduleB = {
 
 const store = new Vuex.Store({
   modules: {
-    a: moduleA,
-    b: moduleB
+    moduleA: moduleA,
+    moduleB: moduleB
   }
 })
 ```
 模块中，局部状态放置在context.state，全局状态放置在context.rootState。
 组件内，moduleA模块的state，最终会放置在&store.state.a内，方法则直接放置在store内，所以模块的函数名不能和store一样。
 
-### plugins
-一个包含一系列作用在 store 上的插件方法（函数）的数组。这些函数接收 store 作为唯一参数，在 store 初始化后调用。
+#### namespaced
+默认情况下模块是没有开启命名空间的，所有的 state、mutations、actions、getters 都会注册到全局中。组件的commit和dispatch会将根和module的同名函数都触发，可以传入第三个参数`{root: true}`表明是调用的根的函数。
 
-**持久化**
+模块添加namespaced属性，就可以隔离开。
 ```
-const store = new Vuex.Store({
-  plugins：[persistedState]
-})
-
-function persistedState( store ){
-  // 保存数据
-  window.addEventListener('beforeunload',()=>{
-    localStorage.setItem('vuexState',JSON.stringify(store.state))
-  })
-
-  // 读取数据
-  try{
-    // 避免本地数据被手动修改
-    let localState = JSON.parse(localStorage.getItem('vuexState'));
-    if (Object.keys(localState).length){
-      store.replaceState(localState)
-    }
-  }
-  catch{
-    console.log('本地存储数据错误')
-  }
+const moduleA = {
+  // 开启命名空间
+  namespaced: true,
+  state: { 
+    name: 0
+  },
+  mutations: { updateName(){} },
+  actions: { updateNameAsync(){} },
+  getters: { getName(){} }
 }
+```
+使用时：
+```
+const store = useStore();
+
+// 访问命名空间模块的state
+let name = computed(() => store.state.moduleA.name);
+
+// 访问命名空间模块的getters
+let getName = computed(() => store.getters['moduleA/getName']);
+
+// 调用命名空间模块的mutations
+let updateName = () => {
+  store.commit('moduleA/mutationName', 'wxc');
+};
+
+// 调用命名空间模块的actions
+let updateNameAsync = () => {
+  store.dispatch('moduleA/actionNameAsync', 'wxc');
+};
 ```
 
 ### 实例方法
@@ -253,3 +261,29 @@ subscribe的用途比如为所有mutation添加统一的回调函数。
 
 #### subscribeAction
 添加对 action 的订阅。
+
+### 持久化plugins
+```
+const store = new Vuex.Store({
+  plugins：[persistedState]
+})
+
+function persistedState( store ){
+  // 保存数据
+  window.addEventListener('beforeunload',()=>{
+    localStorage.setItem('vuexState',JSON.stringify(store.state))
+  })
+
+  // 读取数据
+  try{
+    // 避免本地数据被手动修改
+    let localState = JSON.parse(localStorage.getItem('vuexState'));
+    if (Object.keys(localState).length){
+      store.replaceState(localState)
+    }
+  }
+  catch{
+    console.log('本地存储数据错误')
+  }
+}
+```
