--- a/Vue2/4.监听属性和计算属性.md
+++ b/Vue2/4.监听属性和计算属性.md
@@ -1,7 +1,7 @@
 监听属性和计算属性
 ===================
 ###  监听属性
-用于观察 Vue 数据的变动，特别是当一些数据需要根据其它数据变化时。
+用于观察 Vue 数据（对象的引用地址）是否变化，特别是当一些数据需要根据其它数据变化时。
 
     <div id = "app">
         <input type="text" v-model="msg">
@@ -27,7 +27,7 @@
 	    //...
 	})
 
-默认情况下，watch一个对象，改变某个属性，不会调用watch。此时就需要借助于computed计算属性来返回该属性值，再监视。watch一个数组，除了index方式改变以外，都能监听到。
+只watch一个对象某个属性，需要借助于computed计算属性来返回该属性值，再监视:
 ```
 data() {
       return {
@@ -48,7 +48,19 @@ data() {
       }
     }
 ```
-或者选择深度监听：
+或者:
+```
+watch:{
+    //要监视的数据
+    'demo.name':function(newValue,oldValue){
+        
+        }
+    }
+}
+```
+watch一个数组，除了index方式改变以外，都能监听到。
+
+watch整个对象，只改变其中的属性时，watch不触发，除非选择深度监听：
 ```
 watch: {
   demo: {
@@ -150,8 +162,8 @@ computed:{
 所以，有需要重复调用的复杂算法，使用计算属性更高效。
 
 **计算属性vsWatch**
-Watch监视数据变化时，只能监视单个数据。
-计算属性有返回值，不能执行异步，watch可以。
+1. watch只能监视单个数据。
+2. 计算属性有返回值，不能执行异步，watch可以。
 ```
 data: {
     firstName: 'Foo',
