--- a/Vue2/6.绑定指令v-bind（二）.md
+++ b/Vue2/6.绑定指令v-bind（二）.md
@@ -16,7 +16,7 @@
     }
 
 ###  绑定属性
-使用`v-bind:属性名="数据"`就可以绑定属性。
+使用`v-bind:属性名="数据"`就可以绑定具体属性。
 
     <div id="app">
       <div v-bind:id="id1">文字</div>
@@ -27,6 +27,21 @@
       el: '#app',
       data: {
         id1: 'myid'
+      }
+    })
+使用`v-bind="数据"`就可以绑定数据内所有属性。
+
+    <div id="app">
+      <div v-bind="attr">文字</div>
+    </div>
+    
+    
+    new Vue({
+      el: '#app',
+      data: {
+        attr: {
+          id: 'divId'
+        }
       }
     })
 
