--- a/Vue2/8.列表渲染.md
+++ b/Vue2/8.列表渲染.md
@@ -79,7 +79,7 @@ push(), pop(), shift(), unshift(), splice(),sort(), reverse()
 注意：**key属性不要用index**。
 
 ###  v-for和v-if一起使用
-2.x 版本中在一个元素上同时使用 v-if 和 v-for 时，v-for 会优先作用，即先循环，再每个项if判断。而在3.x 版本中 v-if 会优先作用。
+2.x 版本中在一个元素上同时使用 v-if 和 v-for 时，v-for 会优先作用，即先循环，再每个项if判断。而在3.x 版本中 v-if 会优先作用。正确的做法是不要放在同一个元素内：
 ```
 <template v-for="todo in todos" :key="todo.name">
   <li v-if="todo.isShow">
