--- a/Vue3/1.全局API.md
+++ b/Vue3/1.全局API.md
@@ -29,3 +29,16 @@ const app = createApp({})
 app.config.globalProperties.$http = () => {}
 ```
 
+### 分发版本
+vue的打包文件，使用文件名对应不同的模块规范、运行环境、构建模式：
+```
+vue[.运行时标识].[模块规范].[环境标识].[构建模式].js
+```
+1. 运行时标识：有 runtime 表示 “仅运行时版本”（不含模板编译）；无则是 “完整版”（含模板编译）。
+2. 模块规范：esm，cjs 对应不同模块格式。
+3. 环境标识：browser 表示浏览器环境；bundler是打包工具环境，global是通用环境。
+4. 构建模式：有 prod 表示生产版本（压缩、优化）；无则是开发版本（未压缩、含调试信息）。
+
+前端项目（Vite/Webpack）.vue单文件：常用 vue.runtime.esm-bundler.js，也是模块路径引入时的默认值。
+浏览器直接引入：用 vue.global.js（开发）/ vue.global.prod.js（生产），或现代浏览器用 vue.esm-browser.js 。
+Node.js/SSR：用 vue.cjs.js（开发）/ vue.cjs.prod.js（生产）。
