--- a/Vue3/2.指令.md
+++ b/Vue3/2.指令.md
@@ -7,9 +7,9 @@ v-if/v-else/v-else-if 不需要提供 key ，vue会自动生成唯一的 key。
 2.x 版本中在一个元素上同时使用 v-if 和 v-for 时，v-for 会优先作用。
 3.x 版本中 v-if 会优先于 v-for 生效。
 
-### .native
+### 取消.native
 vue2中，组件的.native允许组件的自定义事件直接由根节点触发。
-vue3取消了.native，默认所有组件事件都由根节点触发，除非组件设置emits，指定哪些事件必须由$emit触发。
+vue3取消了.native，默认所有组件原生DOM事件都由根节点触发，除非组件设置emits，指定哪些事件必须由$emit触发。
 ```
 <my-comp @mousedown="down" @mouseup="up"></my-comp>
 
@@ -26,6 +26,7 @@ vue3取消了.native，默认所有组件事件都由根节点触发，除非组
 ```
 <!-- 组件 -->
 <my-comp v-model="value"></my-comp>
+<!-- 等同于 -->
 <my-comp :modelValue="value" @update:modelValue="value = $event"></my-comp>
 
 <!-- 模版 -->
@@ -39,7 +40,7 @@ vue3取消了.native，默认所有组件事件都由根节点触发，除非组
 props: ['modelValue'],
 emits: ['update:modelValue']
 ```
-在模版内其实也可以使用v-model，通过计算属性来实现：
+在模版内也可以使用v-model，但此时，input的值改变后再设置到prop，就会改变prop值，prop值应该只取来用，不能改变。所以需要通过计算属性来实现：
 ```
 computed:{ 
     value:{
@@ -66,23 +67,6 @@ emits: ['update:title']
 ```
 这表示使用prop title 传值和 update:title 自定义事件，效果就是vue2的mode，将默认的 modelValue 和 update:modelValue 改为自定义的参数。
 
-**自定义修饰符**
-v-model 也可以接受一个自定义修饰符，修饰符会通过prop 名字+'Modifiers' 传递，这个的值为{修饰符: true}。
-```
-<my-comp v-model.modifier1.modifier2="value"></my-comp>
-
-props:['modelValue','modelModifiers'], // modelModifiers:{modifier1: true, modifier2: true}
-emits:['update:modelValue'],
-
-// 有参数
-<my-comp v-model:title.modifier1.modifier2="value"></my-comp>
-
-props:['title','titleModifiers'], // titleModifiers:{modifier1: true, modifier2: true}
-emits:['update:title'],
-```
-在事件触发时，就可以根据modelModifiersd的值来进行不同的操作。
-如果又有参数又有修饰符，生成的 prop 将是 参数 + "Modifiers"。
-
 **多个v-model**
 组件可以使用不同的 v-model 参数，来一一对应模版中的表单元素。
 ```
@@ -104,6 +88,23 @@ emits: ['update:prop1','update:prop2']
   />
 </template>
 ```
+
+**自定义修饰符**
+v-model 也可以接受一个自定义修饰符，修饰符会通过prop 名字+'Modifiers' 传递，这个的值为{修饰符: true}。
+```
+<my-comp v-model.modifier1.modifier2="value"></my-comp>
+
+props:['modelValue','modelModifiers'], // modelModifiers:{modifier1: true, modifier2: true}
+emits:['update:modelValue'],
+
+// 有参数
+<my-comp v-model:title.modifier1.modifier2="value"></my-comp>
+
+props:['title','titleModifiers'], // titleModifiers:{modifier1: true, modifier2: true}
+emits:['update:title'],
+```
+在事件触发时，就可以根据modelModifiersd的值来进行不同的操作。
+如果又有参数又有修饰符，生成的 prop 将是 参数 + "Modifiers"。
 
 ### $attrs
 不是 prop 的 attribute 以及不是 emit 的事件监听器，都统一放置在`$attrs`内，并默认传递给根节点（在vue2，属性默认传递，事件传递，要添加`.native`来实现）。但如果不是单根节点，则必须将 $attrs 显式绑定，说明传给哪个根。
