--- a/Vue3/3.Composition（一）.md
+++ b/Vue3/3.Composition（一）.md
@@ -49,14 +49,16 @@ const state = reactive({
 state.count  //1
 ```
 
-注意：解构赋值和替换整个对象，都会破坏reactive的响应式。
+注意：**解构赋值**和**替换整个对象**，都会破坏reactive的响应式。
 如果要用解构赋值，需要使用 `toRefs(reactive({//...}))` ，这样解构出的值才具有响应式。
 ```
 let {count} = toRefs( state )
 ```
 
 **toRef()/toRefs()**
-toRef()可以对响应式对象上的一个属性，创建一个对应的 ref，这个 ref 与其源属性保持同步。
+toRefs() 专为解构赋值设计，能在不丢失响应式的前提下，将 reactive 创建的响应式对象的所有属性调用 toRef()。
+
+toRef()响应式对象上的一个属性，会创建一个对应的 ref，这个 ref 与其源属性保持同步。
 ```
 let state = reactive({
   foo: 1
@@ -72,7 +74,6 @@ let fooRef2 = toRef(state.foo)
 ```
 这种写法中，只是使用state.foo的值（1）来创建了ref对象，等于是ref(1)，fooRef2和state.foo是没有关系的。
 
-toRefs()则是对响应式对象返回一个对象，这个对象的每个属性都是响应式对象的属性调用toRef()。
 ```
 let state = reactive({
   foo: 1
