--- a/Vue3/4.Composition（二）.md
+++ b/Vue3/4.Composition（二）.md
@@ -13,6 +13,16 @@ let value = computed({
 })
 ```
 
+computed也可以返回函数
+```
+let value = computed(()=>{
+  return function( 参数 ){
+
+  }
+})
+```
+这样可以传参，但每次是函数调用，都会重新计算，不再有缓存。
+
 ### 监听
 #### watchEffect()
 建立一个自动的监听器，在这个监听器内使用了哪个ref，就监听哪个ref。
@@ -27,16 +37,16 @@ let watchEffectStop = watchEffect(() => {
 // 需要时可以停止监听
 // watchEffectStop() 
 ```
-watchEffect就能自动的监听num1和num2的变化，但是没有获取到旧的值。返回值是一个可以用来停止的函数。
+watchEffect就能自动的监听num1和num2的变化，但是只能获取当前值，**无法获取到旧的值**。返回值是一个可以用来停止监听的函数。
 
-自动监听器默认在组件渲染之前会自动执行一次，添加 flush: 'post' 将会使侦听器延迟到组件渲染之后再执行。
+监听器会先自动执行一次，执行时间默认在组件渲染之前。后续再根据监听的数据反生变化后再执行。调用时机由 flush 属性控制，包括DOM 更新前(pre) / 后(post) / 同步(sync，数据改变后立即执行)。
 ```
 watchEffect(()=>{},{flush: 'post'})
 ```
+添加 flush: 'post' 将会使侦听器延迟到组件渲染之后再执行。
 
-
-**异步内容的消除**
-如果在监视器中执行了异步任务，则监视器下次调用时，上次的异步可能需要进行清除：
+**消除异步副作用**
+如果在监视器中执行了异步任务，则监视器调用时，上次调用的异步可能需要进行清除：
 ```
 let watchEffect = watchEffect((clear) => {
     let timeout = setTimeout(()=>{
@@ -44,7 +54,8 @@ let watchEffect = watchEffect((clear) => {
     },1000);
 
     clear(()=>{
-        clearTimeout(timeout)
+      // 取消异步执行
+      clearTimeout(timeout)
     })
 })
 ```
@@ -81,14 +92,14 @@ watch 默认当数据源变化时，才会执行回调，如果传入 immediate:
 
 状态改变时，触发侦听器回调函数和触发组件更新类似，都会在一个tick内批次处理。默认情况下，侦听器回调会在父组件更新 (如有) 之后、所属组件的 DOM 更新之前被调用。因此，在侦听器回调中访问的 DOM 处于更新前的状态，可以添加 flush: 'post' 选项将侦听器回调函数延迟到组件渲染之后再执行。
 
-**异步内容的消除**
+**消除异步副作用**
 watch的消除发生在第二个参数回调函数内。
 
 ### 响应式
 vue3的被监控的函数包括rander(templete),watcheffect,watch,computed。
 当这些函数使用了响应式对象时，响应式对象的变化会导致函数重新运行。
 
-### ref
+### ref属性
 将组件或元素的ref属性绑定到一个ref对象上，就能从该ref对象获取到dom。
 ```
 <template>
