--- a/Vue3/7.pinia.md
+++ b/Vue3/7.pinia.md
@@ -25,21 +25,28 @@ export const useStudentsStore = defineStore('students', options)
 ```
 这样，就创建了一个学生的状态库。
 
-defineStore()第一个参数是库的id，第二个参数可以是options，也可以是setup函数。返回值（useStudentsStore）是一个函数。
+defineStore()第一个参数是库的id，第二个参数可以是options，也可以是setup函数。返回值useStudentsStore是一个函数，官方推荐以use开头，Store结尾来起名。
 
 #### options
 options内包括state，getters和actions。类似vue2的data，computed，methods。
 ```
 {
-    state: () => ({ number: 0 }),
+    state(){
+        return { number: 0 }
+    },
     getters: {
         // getter可以接受state作为参数
-        // getter内也可以使用this（但不再有typescript类型推导）
         doubleNumber: (state) => state.number * 2,
+
+        // getter内也可以使用this（但不再有typescript类型推导）
         fourTimesNumber: ()=> this.doubleNumber * 2
     },
     actions: {
         increment() {
+            this.number++
+        },
+        async incrementAsync(delay = 1000) {
+            await new Promise(resolve => setTimeout(resolve, delay))
             this.number++
         },
     },
@@ -65,13 +72,14 @@ defineStore('students', ()=>{
 ```
 let studentsStore = useStudentsStore();
 ```
-studentsStore 是一个用 reactive 包装的对象，如果解构赋值，需要使用storeToRefs()：
+studentsStore 是一个用 reactive 包装的对象，如果解构赋值state和getters，需要使用storeToRefs()：
 ```
 let {number, doubleNumber} = storeToRefs(studentsStore)
+
 // 作为 action 的 increment 可以直接解构
 const { increment } = studentsStore
 
-console.log(number.value,doubleNumber.value)
+console.log(number.value, doubleNumber.value)
 increment()
 
 ```
