--- a/Vue2/11.组件（一）.md
+++ b/Vue2/11.组件（一）.md
@@ -45,7 +45,7 @@ new Vue({
   }
 })
 ```
-注意：局部组件，必须先注册到其他组件，才能在该组件内使用。
+注意：局部组件，必须先注册到其他组件，才能在其他组件内使用。
 
 局部组件的优点在于，使用打包工具时，全局组件不论是否使用，都会被打包，而局部组件只有使用了，才会打包。
 
@@ -74,7 +74,7 @@ components: {
 异步组件只有使用时，才从服务器加载，import引入时，并不加载。
 
 ###  组件非prop的 Attribute
-组件的attr属性除了prop以外，默认都会传递到组件的根元素上。这其中，class和style会和根元素的attr叠加，其他的会进行覆盖。
+组件元素的attr属性除了prop以外，默认都会传递到组件的根元素上。这其中，class和style会和根元素的叠加，其他的会覆盖到根元素上。
 要禁止组件的根元素继承 attribute，可以在组件的选项中设置 inheritAttrs: false。
 ```
 Vue.component('my-component', {
@@ -84,7 +84,7 @@ Vue.component('my-component', {
 ```
 **$attrs**
 
-`$attrs`是非prop的attr组成的对象，根元素内的其他元素可以使用`v-bind="$attrs"`获取组件所有非prop的attr:
+`$attrs`是组件元素非prop的attr组成的对象，根元素内的其他元素可以使用`v-bind="$attrs"`获取组件所有非prop的attr:
 ```
 <template id="myComp">
     <div>
@@ -99,7 +99,7 @@ inheritAttrs: false
 
 **$listeners**
 
-`$listeners`是组件的所有事件监听器组成的对象，使用`v-on="$listeners"`能将事件监听器指向组件的某个子元素：
+`$listeners`是组件元素所有事件监听器组成的对象，使用`v-on="$listeners"`能将事件监听器指向组件的某个子元素：
 ```
 <my-comp @mousedown="mousedown" @mouseup="mouseup"></my-comp>
 
@@ -125,9 +125,9 @@ Vue.component('my-input', {
   `
 })
 ```
-value对于text和radio作用是不同的，text可以直接使用，raido则需要将value和自身的value值对比来确定checked。所以对于radio，checkbox等，需要添加model，指定v-model传递的值放在哪个prop和监听什么自定义事件：
+value对于text和radio作用是不同的，text可以直接使用，raido则需要将value和自身的value值对比来确定checked。所以对于radio，checkbox等，需要添加model，覆盖默认的 :value 和 @input：
 ```
-<!-- 模版 -->
+<!-- 子组件模版 -->
 model: {
   prop: 'parevalue',
   event: 'change'
@@ -137,7 +137,7 @@ props: ['value','parevalue'],
 <!-- 组件 -->
 <my-radio v-for="num in arrNum" :key="num" :value="num" v-model="selected"></my-radio>
 ```
-这样就指定了组件v-model的值selected放在parevalue这个prop内传入，并且监听change自定义事件，当事件触发传递一个新的值的时候，更新selected的值。
+这样就指定了组件v-model的值selected放在parevalue这个传入子组件，并且监听change自定义事件，当事件触发传递一个新的值的时候，更新selected的值。
 
 ###  插槽slot
 组件元素之间的位置我称之为插槽位，内容本来是没有作用的：
@@ -202,7 +202,7 @@ slot具有name属性，只有name相同的插槽位才能对应替换slot：
 ```
 一个不带 name 的slot带有隐含的名字“default”。
 
-**vue2.6+及vue3中则使用v-slot:name代替slot='name'**，`v-slot:name`可以缩写为`#name`。
+**vue2.6+及vue3中则使用v-slot:name代替slot='name'**，`v-slot:name`可以缩写为`#name`，如果name是变量的话，就使用中括号括起来`#[name]`。
 
 **v-slot只能写在template上**，所以插槽位元素都需要放置于template标签内。
 
@@ -229,7 +229,7 @@ data(){
 `#name='slotData'`
 
 ### 组件事件.native修饰符
-组件事件添加.native，则根元素在触发这个事件时，组件就能直接监听到，不需要&emit。
+.native修饰符会强制将组件的事件转为「原生 DOM 事件」，并直接绑定到组件的根元素上。
 ```
 // 下面三种方式是一样的，都能触发组件的click
 <my-comp @click.native="click"></my-comp>
@@ -252,7 +252,14 @@ data(){
 但如果不是根元素，就还是需要&emit。
 
 ### .sync 修饰符
-.sync实现 prop 的“双向绑定”。
+.sync是@update:propName的语法糖。
+```
+<!-- 父组件中 -->
+
+<Child :title.sync="titleValue" />
+<!-- 等价于 -->
+<Child :title="titleValue" @update:title="titleValue = $event" />
+```
 组件的值作为prop传递给子组件，子组件通过`update:propName`自定义事件发送新值，通知组件变更要传递的值：
 ```
 <my-comp :value.sync="组件传递的值"></my-comp>
@@ -266,3 +273,6 @@ props:['value']
 ```
 <my-comp v-bind.sync="属性和值的键值对"></my-comp>
 ```
+
+v-model+model和.sync在实现单个字段双向绑定的最终效果上是等价的，多字段绑定场景下，.sync 是唯一选择。
+Vue 3 统一了两者的逻辑，移除了 .sync 修饰符和 model 选项，统一用 v-model:字段名 实现。
