更新 4.Composition（二）.md
update

--- a/Vue3/4.Composition（二）.md
+++ b/Vue3/4.Composition（二）.md
@@ -75,7 +75,7 @@ watchStop()
 ```
 监听响应式对象时，默认深层级监听，如果回调函数是由于深层级的变更而被触发，那么新值和旧值将是同一个对象。
 
-如果是一个取值函数，则默认返回不同的对象时，才会触发回调：
+如果是一个取值函数，取值函数在watch初始化时会回调一次，获取监听的依赖。当依赖变化时，watch会执行，触发回调：
 ```
 ()=>{return state.count} //state的count属性整体改变才会触发回调
 ```
